# go-tibia

./: .bazelrc  .drone.yml  .gitignore  .gitmodules  BUILD.bazel  README.md  WORKSPACE  bitbucket-pipelines.yml  build-wasm.sh  deps.bzl  doc.go  gazelle.sh  go.mod  go.sum  message.go  rsa.go  run-web-runner.sh  run-web.sh  run.sh  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: go.yml  scip.yml
.idx/: dev.nix
_references/: color_error_analysis.py  color_error_report.md
_references/tibiawiki.dev/: README.md  api-docs.json
cmd/gotserv/: BUILD.bazel  doc.go  gotserv.go
cmd/gotweb/: BUILD.bazel  gotweb.go  sitemap.go
cmd/gotwebfe/: BUILD.bazel  console_js.go  console_wasi.go  jsglobal_js.go  jsglobal_wasi.go  main.go  main_notweb.go
cmd/gotwebfe_runner/: BUILD.bazel  package-lock.json  package.json  runner.go  wasi-runner.js  wasi-runner.mjs
cmd/itemprint/: BUILD.bazel  creature.go  item.go  itemprint.go  map.go  out.go  pic.go  spr.go  termsize_notunix.go  termsize_unix.go  things.go
cmd/vapidgen/: BUILD.bazel  vapidgen.go
cmd/wikiloader/: BUILD.bazel  extractor.go
compositor/: BUILD.bazel  additive_light_overlays.go  composite_light_overlay.go  compositor.go  compositor_test.go  floor.go  tile.go
compositor/dom/: BUILD.bazel  compositor.go  compositor_wasi.go
dat/: BUILD.bazel  dat.go  dat_test.go
datafiles/: .gitignore  BUILD.bazel  embeds.go  embeds_pre116.go  itemtable.html  outfittable.html  range-test-map.otbm
datafiles/html/: BUILD.bazel  index.html  manifest.json  sw.js  tfont.css
gameworld/: BUILD.bazel  compositor.go  compositor_test.go  doc.go  gameworld.go  map.go  map_test.go  playermove.go  procedural_map.go  stubs.go  test_using_otb_map.go
gameworld/gwmap/: BUILD.bazel  creature.go  map.go
imageprint/: BUILD.bazel  toy.go  toy_notrasterm.go  toy_rasterm.go
login/: BUILD.bazel  login.go  messages.go
net/: BUILD.bazel  message.go  rsa.go
otb/: BUILD.bazel  items.go  items_test.go  otb.go  otb_test.go
otb/items/: BUILD.bazel  doc.go  items.go  items_test.go  xml.go
otb/map/: BUILD.bazel  enum.go  helpers_for_otb_map_test.go  map.go  map_test.go  new.go  public.go
paths/: BUILD.bazel  find.go  find_local.go  find_wasm.go  flag.go  fs.go  http.go
secrets/: BUILD.bazel  doc.go  opentibia.go
spr/: BUILD.bazel  doc.go  examples_test.go  image.go  spr.go  spr_test.go  toy.go
things/: BUILD.bazel  color_error_analysis.py  color_error_report.md  compositor.go  things.go
things/full/: BUILD.bazel  from_default_path.go  from_flags.go  from_paths.go
tools/: latest_version_tag.sh  scip-go.sh
ttesting/: BUILD.bazel  asserts.go
v1/dat/: dat_test.go  doc.go
v1/gameworld/: BUILD.bazel  compositor.go  gameworld.go  map.go  map_test.go  playermove.go  procedural_map.go  stubs.go  test_using_otb_map.go
v1/login/: BUILD.bazel  doc.go  login.go  messages.go
v1/net/: BUILD.bazel  doc.go
v1/otb/: doc.go  otb.go
v1/otb/items/: items.go  items_test.go
v1/otb/map/: map.go  map_test.go
v1/spr/: spr_test.go
v1/things/: compositor.go  doc.go  things.go
web/: BUILD.bazel  handlers.go  push.go
xmls/: BUILD.bazel  example_test.go  outfits.go  wiki.go
