# -*- mode: python; -*-
# vim: set syntax=python:

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "badc0de.net/pkg/go-tibia",
)

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "badc0de.net/pkg/go-tibia",
    visibility = ["//visibility:public"],
)
