# -*- mode: python; -*-
# vim: set syntax=python:

load("@bazel_gazelle//:def.bzl", "gazelle"  )

# gazelle:prefix badc0de.net/pkg/go-tibia
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ]
)
