load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "additive_light_overlays.go",
        "composite_light_overlay.go",
        "compositor.go",
        "floor.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/compositor",
    visibility = ["//visibility:public"],
    deps = [
        "//dat:go_default_library",
        "//gameworld:go_default_library",
        "//things:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["compositor_test.go"],
    importpath = "badc0de.net/pkg/go-tibia/compositor",
    library = ":go_default_library",
    deps = [
        "//gameworld:go_default_library",
        "//imageprint:go_default_library",
        "//things/full:go_default_library",
        "@com_github_nfnt_resize//:go_default_library",
        "@org_golang_x_crypto//ssh/terminal:go_default_library",
    ],
)
