load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "compositor",
    srcs = [
        "additive_light_overlays.go",
        "composite_light_overlay.go",
        "compositor.go",
        "floor.go",
        "tile.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/compositor",
    visibility = ["//visibility:public"],
    deps = [
        "//dat",
        "//gameworld",
        "//things",
        "@com_github_golang_glog//:glog",
    ],
)

go_test(
    name = "compositor_test",
    srcs = ["compositor_test.go"],
    embed = [":compositor"],
    importpath = "badc0de.net/pkg/go-tibia/compositor",
    deps = [
        "//gameworld",
        "//imageprint",
        "//things/full",
        "@com_github_nfnt_resize//:resize",
        "@org_golang_x_crypto//ssh/terminal",
    ],
)
