load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["dat.go"],
    importpath = "badc0de.net/pkg/go-tibia/dat",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["dat_test.go"],
    data = ["@tibia854//:Tibia.dat"],
    importpath = "badc0de.net/pkg/go-tibia/dat",
    library = ":go_default_library",
    deps = ["//ttesting:go_default_library"],
)
