load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dat",
    srcs = [
        "dat.go",
        "doc.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/dat",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:glog"],
)

go_test(
    name = "dat_test",
    size = "small",
    srcs = ["dat_test.go"],
    data = ["@tibia854//:Tibia.dat"],
    embed = [":dat"],
    importpath = "badc0de.net/pkg/go-tibia/dat",
    deps = [
        "//paths",
        "//ttesting",
    ],
)
