load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "gameworld.go",
        "map.go",
        "playermove.go",
        "procedural_map.go",
        "stubs.go",
        "test_using_otb_map.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/gameworld",
    visibility = ["//visibility:public"],
    deps = [
        "//net:go_default_library",
        "//otb/items:go_default_library",
        "//paths:go_default_library",
        "//things:go_default_library",
        "//xmls:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["map_test.go"],
    importpath = "badc0de.net/pkg/go-tibia/gameworld",
    library = ":go_default_library",
    deps = [
        "//net:go_default_library",
        "//things:go_default_library",
    ],
)
