load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gameworld",
    srcs = [
        "doc.go",
        "gameworld.go",
        "map.go",
        "playermove.go",
        "procedural_map.go",
        "stubs.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/gameworld",
    visibility = ["//visibility:public"],
    deps = [
        "//dat",
        "//gameworld/gwmap",
        "//net",
        "//otb/items",
        "//paths",
        "//things",
        "//xmls",
        "@com_github_golang_glog//:glog",
        "@com_github_pkg_errors//:errors",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "gameworld_test",
    srcs = ["map_test.go"],
    embed = [":gameworld"],
    importpath = "badc0de.net/pkg/go-tibia/gameworld",
    deps = [
        "//net",
        "//otb/items",
        "//paths",
        "//things",
    ],
)
