load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "toy.go",
        "toy_notrasterm.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/imageprint",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_andybons_gogif//:go_default_library",
        "@com_github_gookit_color//:go_default_library",
    ],

    # n.b. This still uses Go 1.9. Do not use "toy_rasterm.go" or import BourgeoisBear/rasterm,
    # which, due to use of binary constants, won't work until Go 1.13.
)
