load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "imageprint",
    srcs = [
        "toy.go",
        "toy_notrasterm.go",
        "toy_rasterm.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/imageprint",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gookit_color//:color",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@com_github_andybons_gogif//:gogif",
            "@com_github_bourgeoisbear_rasterm//:rasterm",
        ],
        "//conditions:default": [],
    }),

    # n.b. This still uses Go 1.9. Do not use "toy_rasterm.go" or import BourgeoisBear/rasterm,
    # which, due to use of binary constants, won't work until Go 1.13.
)
