load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "login.go",
        "messages.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/login",
    visibility = ["//visibility:public"],
    deps = [
        "//net:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)
