load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "login",
    srcs = [
        "doc.go",
        "login.go",
        "messages.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/login",
    visibility = ["//visibility:public"],
    deps = [
        "//net",
        "@com_github_golang_glog//:glog",
    ],
)
