load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "net",
    srcs = [
        "doc.go",
        "message.go",
        "rsa.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/net",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@org_golang_x_crypto//xtea",
    ],
)
