load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "otb",
    srcs = [
        "doc.go",
        "otb.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/otb",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:glog"],
)

go_test(
    name = "otb_test",
    size = "small",
    srcs = ["otb_test.go"],
    data = ["//datafiles:items.otb"],
    embed = [":otb"],
    importpath = "badc0de.net/pkg/go-tibia/otb",
    deps = ["//paths"],
)
