load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "paths",
    srcs = [
        "find.go",
        "find_local.go",
        "find_wasm.go",
        "flag.go",
        "fs.go",
        "http.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/paths",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_pkg_errors//:errors",
    ],
)
