load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "image.go",
        "spr.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/spr",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["spr_test.go"],
    data = ["@tibia854//:Tibia.spr"],
    importpath = "badc0de.net/pkg/go-tibia/spr",
    library = ":go_default_library",
)
