load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "spr",
    srcs = [
        "doc.go",
        "image.go",
        "spr.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/spr",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:glog"],
)

go_test(
    name = "spr_test",
    size = "small",
    srcs = [
        "examples_test.go",
        "spr_test.go",
    ],
    data = ["@tibia854//:Tibia.spr"],
    embed = [":spr"],
    importpath = "badc0de.net/pkg/go-tibia/spr",
    deps = [
        "//imageprint",
        "//paths",
        "@com_github_nfnt_resize//:resize",
        "@org_golang_x_crypto//ssh/terminal",
    ],
)

go_test(
    name = "go_default_test_examples",
    size = "small",
    srcs = ["examples_test.go"],
    data = ["@tibia854//:Tibia.spr"],
    embed = [":spr"],
    importpath = "badc0de.net/pkg/go-tibia/spr",
    deps = [
        "//paths:go_default_library",
    ],
)
