load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "things.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/things",
    visibility = ["//visibility:public"],
    deps = [
        "//dat:go_default_library",
        "//otb/items:go_default_library",
        "//spr:go_default_library",
    ],
)
