load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "things",
    srcs = [
        "compositor.go",
        "doc.go",
        "things.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/things",
    visibility = ["//visibility:public"],
    deps = [
        "//dat",
        "//otb/items",
        "//spr",
        "@com_github_golang_glog//:glog",
    ],
)
