load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = [
        "handlers.go",
        "push.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/web",
    visibility = ["//visibility:public"],
    deps = [
        "//compositor",
        "//gameworld",
        "//spr",
        "//things",
        "@com_github_ericpauley_go_quantize//quantize",
        "@com_github_golang_glog//:glog",
        "@com_github_gorilla_mux//:mux",
        "@com_github_sherclockholmes_webpush_go//:webpush-go",
    ],
)
