load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "gotserv.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotserv",
    visibility = ["//visibility:private"],
    deps = [
        "//dat:go_default_library",
        "//gameworld:go_default_library",
        "//login:go_default_library",
        "//net:go_default_library",
        "//otb/items:go_default_library",
        "//secrets:go_default_library",
        "//things:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_net//trace:go_default_library",
    ],
)

go_binary(
    name = "gotserv",
    data = [
        "@itemsotb854//file",
        "@tibia854//:Tibia.dat",
    ],
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotserv",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
