load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gotserv_lib",
    srcs = [
        "doc.go",
        "gotserv.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotserv",
    visibility = ["//visibility:private"],
    deps = [
        "//gameworld",
        "//login",
        "//net",
        "//otb/map",
        "//paths",
        "//secrets",
        "//things/full",
        "//web",
        "@com_github_golang_glog//:glog",
        "@com_github_gorilla_mux//:mux",
        "@net_badc0de_pkg_flagutil//:flagutil",
        "@org_golang_x_net//trace",
    ],
)

go_binary(
    name = "gotserv",
    data = [
        "@itemsotb854//file",
        "@tibia854//:Tibia.dat",
        "//datafiles:all_data_files",
    ],
    embed = [":gotserv_lib"],
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotserv",
    visibility = ["//visibility:public"],
)
