load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gotweb.go"],
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotweb",
    visibility = ["//visibility:private"],
    deps = [
        "//dat:go_default_library",
        "//gameworld:go_default_library",
        "//otb/map:go_default_library",
        "//paths:go_default_library",
        "//spr:go_default_library",
        "//things:go_default_library",
        "//things/full:go_default_library",
        "//web:go_default_library",
        "//xmls:go_default_library",
        "@com_github_bradfitz_iter//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_gorilla_handlers//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@net_badc0de_pkg_flagutil//:go_default_library",
    ],
)

go_binary(
    name = "gotweb",
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotweb",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
