load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gotweb_lib",
    srcs = [
        "gotweb.go",
        "sitemap.go",
    ],
    data = [
        "//datafiles:all_data_files",
    ],
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotweb",
    visibility = ["//visibility:private"],
    deps = [
        "//dat",
        "//gameworld",
        "//otb/map",
        "//paths",
        "//spr",
        "//things",
        "//things/full",
        "//web",
        "//xmls",
        "@com_github_bradfitz_iter//:iter",
        "@com_github_golang_glog//:glog",
        "@com_github_gorilla_handlers//:handlers",
        "@com_github_gorilla_mux//:mux",
        "@net_badc0de_pkg_flagutil//:flagutil",
    ],
)

go_binary(
    name = "gotweb",
    embed = [":gotweb_lib"],
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotweb",
    visibility = ["//visibility:public"],
)
