load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main_notweb.go"],
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotwebfe",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gotwebfe",
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotwebfe",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
