load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gotwebfe_runner_lib",
    srcs = ["runner.go"],
    importpath = "badc0de.net/pkg/go-tibia/cmd/gotwebfe_runner",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_mattn_gowasmer//:gowasmer",
        "@com_github_wasmerio_wasmer_go//wasmer",
    ],
)

go_binary(
    name = "gotwebfe_runner",
    embed = [":gotwebfe_runner_lib"],
    visibility = ["//visibility:public"],
)
