load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "itemprint_lib",
    srcs = [
        "creature.go",
        "item.go",
        "itemprint.go",
        "map.go",
        "out.go",
        "pic.go",
        "spr.go",
        "things.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/cmd/itemprint",
    visibility = ["//visibility:private"],
    deps = [
        "//compositor",
        "//dat",
        "//gameworld",
        "//imageprint",
        "//otb/items",
        "//otb/map",
        "//paths",
        "//spr",
        "//things",
        "@com_github_common_nighthawk_go_figure//:go-figure",
        "@com_github_golang_glog//:glog",
        "@com_github_nfnt_resize//:resize",
        "@com_github_pkg_errors//:errors",
        "@net_badc0de_pkg_flagutil//:flagutil",
        "@org_golang_x_crypto//ssh/terminal",
    ],
)

go_binary(
    name = "itemprint",
    embed = [":itemprint_lib"],
    importpath = "badc0de.net/pkg/go-tibia/cmd/itemprint",
    visibility = ["//visibility:public"],
)
