load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gwmap",
    srcs = [
        "creature.go",
        "map.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/gameworld/gwmap",
    visibility = ["//visibility:public"],
    deps = [
        "//dat",
        "//net",
        "//things",
    ],
)
