load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "items",
    srcs = [
        "doc.go",
        "items.go",
        "xml.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/otb/items",
    visibility = ["//visibility:public"],
    deps = [
        "//otb",
        "@com_github_golang_glog//:glog",
    ],
)

go_test(
    name = "items_test",
    size = "small",
    srcs = ["items_test.go"],
    data = ["//datafiles:items.otb"],
    embed = [":items"],
    importpath = "badc0de.net/pkg/go-tibia/otb/items",
    deps = [
        "//paths",
        "//ttesting",
    ],
)
