load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["map.go"],
    importpath = "badc0de.net/pkg/go-tibia/otb/map",
    visibility = ["//visibility:public"],
    deps = [
        "//gameworld:go_default_library",
        "//net:go_default_library",
        "//otb:go_default_library",
        "//otb/items:go_default_library",
        "//things:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["map_test.go"],
    importpath = "badc0de.net/pkg/go-tibia/otb/map",
    library = ":go_default_library",
    deps = [
        "//gameworld:go_default_library",
        "//otb/items:go_default_library",
        "//paths:go_default_library",
        "//things:go_default_library",
        "@net_badc0de_pkg_flagutil//:go_default_library",
    ],
)
