load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "map",
    srcs = [
        "enum.go",
        "map.go",
        "new.go",
        "public.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/otb/map",
    visibility = ["//visibility:public"],
    deps = [
        "//dat",
        "//gameworld",
        "//net",
        "//otb",
        "//otb/items",
        "//things",
        "@com_github_golang_glog//:glog",
    ],
)

go_test(
    name = "map_test",
    srcs = [
        "helpers_for_otb_map_test.go",
        "map_test.go",
    ],
    embed = [":map"],
    importpath = "badc0de.net/pkg/go-tibia/otb/map",
    deps = [
        "//gameworld",
        "//gameworld/gwmap",
        "//net",
        "//otb/items",
        "//paths",
        "//things",
        "@net_badc0de_pkg_flagutil//:flagutil",
    ],
)
