load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "from_default_path.go",
        "from_flags.go",
        "from_paths.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/things/full",
    visibility = ["//visibility:public"],
    deps = [
        "//dat:go_default_library",
        "//otb/items:go_default_library",
        "//paths:go_default_library",
        "//spr:go_default_library",
        "//things:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
