load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "full",
    srcs = [
        "from_default_path.go",
        "from_flags.go",
        "from_paths.go",
    ],
    importpath = "badc0de.net/pkg/go-tibia/things/full",
    visibility = ["//visibility:public"],
    deps = [
        "//dat",
        "//otb/items",
        "//paths",
        "//spr",
        "//things",
        "@com_github_pkg_errors//:errors",
    ],
)
